--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+
+    <link rel="stylesheet" href="styles/flower.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-item">
+            <h1 class="first-header">Let's make beautiful flowers a part of your life.</h1>
+            <p class="first-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn-primary">Shop Now</button>
+        </div>
+        <div class="first-img">
+            <img class="profile-pic" src="images/Flower Asset/pngwing 10.png" alt="">
+        </div>
+
+    </header>
+    <main>
+        <section class="first-section">
+            <div class="first-section-hp">
+                <h3 class="section-header">Our Featured Flowers</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="section-image">
+                
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
