first section added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header class="header">
         <div class="header-item">
             <h1 class="first-header">Let's make beautiful flowers a part of your life.</h1>
-            <p class="first-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <p class="first-description">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                more-or-less normal distribution of letters.</p>
             <button class="btn-primary">Shop Now</button>
         </div>
         <div class="first-img">
@@ -30,11 +32,38 @@
         <section class="first-section">
             <div class="first-section-hp">
                 <h3 class="section-header">Our Featured Flowers</h3>
-                <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
             </div>
             <div class="section-image">
-                
+                <div class="img-head">
+                    <img src="images/Flower Asset/pngwing 6.png" alt="">
+                    <h3>Pink Flower Tree</h3>
+                </div>
+                <div class="img-head">
+                    <img src="images/Flower Asset/pngwing 5.png" alt="">
+                    <h3>Pink Flower Tree</h3>
+                </div>
+                <div class="img-head">
+                    <img src="images/Flower Asset/pngwing 7.png" alt="">
+                    <h3>Pink Flower Tree</h3>
+                </div>
             </div>
+        </section>
+        <section class="skill-section">
+            <div class="skill">
+                <img src="images/Flower Asset/Group 57.png" alt="">
+                <h3>Same Day Delivery. Click & Collect.</h3>
+            </div>
+            <div class="skill">
+                <img src="images/Flower Asset/Group 58.png" alt="">
+                <h3>Fresh Flowers. Local Growers.</h3>
+            </div>
+            <div class="skill">
+                <img src="images/Flower Asset/Group 59.png" alt="">
+                <h3>24/7 Free Support.</h3>
+            </div>
+
         </section>
     </main>
     <footer>
