--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
 <body>
     <header class="header">
-        <div class="header-item">
-            <h1 class="first-header">Let's make beautiful flowers a part of your life.</h1>
-            <p class="first-description">It is a long established fact that a reader will be distracted by the readable
-                content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                more-or-less normal distribution of letters.</p>
-            <button class="btn-primary">Shop Now</button>
-        </div>
-        <div class="first-img">
-            <img class="profile-pic" src="images/Flower Asset/pngwing 10.png" alt="">
+        <div class="banner">
+            <div class="header-item">
+                <h1 class="first-header">Let's make beautiful flowers a part of your life.</h1>
+                <p class="first-description">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="first-img">
+                <img class="profile-pic" src="images/Flower Asset/pngwing 10.png" alt="">
+            </div>
         </div>
 
     </header>
@@ -33,19 +35,19 @@
             <div class="first-section-hp">
                 <h3 class="section-header">Our Featured Flowers</h3>
                 <p class="section-description">It is a long established fact that a reader will be distracted by the
-                    readable content of a page when looking at its layout.</p>
+                    readable <br> content of a page when looking at its layout.</p>
             </div>
-            <div class="section-image">
-                <div class="img-head">
-                    <img src="images/Flower Asset/pngwing 6.png" alt="">
+            <div class="feature-img">
+                <div class="feature-img-1">
+                    <img src="images/New folder/pngwing 6.png" alt="">
                     <h3>Pink Flower Tree</h3>
                 </div>
-                <div class="img-head">
-                    <img src="images/Flower Asset/pngwing 5.png" alt="">
+                <div class="feature-img-2">
+                    <img src="images/New folder/pngwing 5.png" alt="">
                     <h3>Pink Flower Tree</h3>
                 </div>
-                <div class="img-head">
-                    <img src="images/Flower Asset/pngwing 7.png" alt="">
+                <div class="feature-img-3">
+                    <img src="images/New folder/pngwing 7.png" alt="">
                     <h3>Pink Flower Tree</h3>
                 </div>
             </div>
