Two Section Added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="banner">
             <div class="header-item">
                 <h1 class="first-header">Let's make beautiful flowers a part of your life.</h1>
-                <p class="first-description">It is a long established fact that a reader will be distracted by the readable
+                <p class="first-description">It is a long established fact that a reader will be distracted by the
+                    readable
                     content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
                     more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
@@ -67,6 +68,49 @@
             </div>
 
         </section>
+        <section class="hot-deal-section">
+            <div class="hot-deal-1">
+                <div>
+                    <h3>Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Sign Up</button>
+                </div>
+                <div>
+                    <img src="images/Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="Instagram-section">
+            <div class="IG-Section">
+                <h3 class="section-header">Instagram</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="IMG-Section">
+                <div class="IG-IMG-1">
+                    <img src="images/Flower Asset/Flower 01.png" alt="">
+                </div>
+                <div class="IG-IMG-2">
+                    <img src="images/Flower Asset/Rectangle 4.png" alt="">
+                </div>
+                <div class="IG-IMG-3">
+                    <img src="images/Flower Asset/Rectangle 5.png" alt="">
+                </div>
+                <div class="IG-IMG-4">
+                    <img src="images/Flower Asset/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="last-banner">
+            <div>
+                <h3>Get The Latest Deals</h3>
+                <p>$30 coupon for first shopping</p>
+            </div>
+            <div>
+                <input type="email" name="" placeholder="Enter your email" id="">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+        </section>
+
     </main>
     <footer>
 
