--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             <div class="hot-deal-1">
                 <div>
                     <h3>Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
                 <div>
@@ -83,7 +84,8 @@
         <section class="Instagram-section">
             <div class="IG-Section">
                 <h3 class="section-header">Instagram</h3>
-                <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the
+                    readable<br> content of a page when looking at its layout.</p>
             </div>
             <div class="IMG-Section">
                 <div class="IG-IMG-1">
@@ -102,18 +104,26 @@
         </section>
         <section class="last-banner">
             <div>
-                <h3>Get The Latest Deals</h3>
-                <p>$30 coupon for first shopping</p>
+                <h3 class="banner-header">Get The Latest Deals</h3>
+                <p class="banner-description">$30 coupon for first shopping</p>
             </div>
             <div>
-                <input type="email" name="" placeholder="Enter your email" id="">
+                <input class="banner-email" type="email" name="" placeholder="Enter your email" id="">
                 <button class="btn-primary">Subscribe</button>
             </div>
         </section>
 
     </main>
     <footer>
+        <div class="footer-banner">
+            <div class="footer-tags">
+                <h3 class="footer-head"><span class="text-primary">Flower</span>Shop</h3>
+                <p class="footer-description">It is a long established fact that a reader will be distracted by the
+                    readable <br> content of a page when looking at its layout.</p>
+                <p class="copy-banner">&copy;2020-2025, FlowerShop.com. All rights reserved. </p>
 
+            </div>
+        </div>
     </footer>
 </body>
 
